manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-dev-env
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-dev-env
  template:
    metadata:
      labels:
        app: java-dev-env
    spec:
      containers:
        - name: dev-container
          image: prashantkr2901/code-server:jdk21
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: workspace
              mountPath: /home/coder

            - name: config
              mountPath: /home/coder/.config/code-server/config.yaml
              subPath: config.yaml

      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: dev-workspace-pvc

        - name: config
          configMap:
            name: code-server-config
---

apiVersion: v1
kind: Service
metadata:
  name: java-dev-env
  namespace: dev
spec:
  selector:
    app: java-dev-env
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-dev-env
  namespace: dev
spec:
  ingressClassName: kong
  rules:
    - host: java-dev.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-dev-env
                port:
                  number: 80
---
